# insta_pruner_package

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
insta_pruner/: __init__.py  pruner.py
