[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insta-pruner"
version = "0.1.2"
description = "Unfollows accounts from a provided list on Instagram, with influencer filtering and live logging."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Rahul S R", email = "37940339+officialsrrahul@users.noreply.github.com" }
]
keywords = ["instagram", "unfollow", "automation", "selenium", "pruner"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/officialsrrahul/insta_pruner_package"
Repository = "https://github.com/officialsrrahul/insta_pruner_package"
BugTracker = "https://github.com/officialsrrahul/insta_pruner_package/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["insta_pruner*"]
